dto, exception bugfix